Temporary fix for the scrollbar issue on dashboard. This commit contains temporary changes for adding opacity changes on home feed cards with the scroll through scrollbar, while this feature changes behavior of cards as expected but affects the layout and other UI components viz. Its not integrated  in the UI till now.

--- a/server/src/main/assets/stylesheets/synereo-main.less
+++ b/server/src/main/assets/stylesheets/synereo-main.less
@@ -649,27 +649,6 @@ transform: translate(0,0); */
   transition: opacity 1s;
   opacity:0.35 !important;
 }
-.opacity-35 {
-  opacity:0.35;
-}
-.opacity-60 {
-  opacity:0.6;
-}
-#homeFeedMediaList li:first-of-type {
-  opacity:1;
-}
-#homeFeedMediaList:hover li:first-of-type {
-  opacity:.35;
-}
-#homeFeedMediaList li:nth-of-type(2){
-  opacity:0.60;
-}
-#homeFeedMediaList li:nth-of-type(3){
- opacity:0.35;
-}
-#homeFeedMediaList li {
-  opacity:0.35;
-}
 #homeFeedMediaList li:hover,#homeFeedMediaList li:focus {
   opacity:1 !important;
   transform: scale(1.03);
@@ -686,10 +665,6 @@ transform: translate(0,0); */
  opacity:0.35 !important;
  transition:opacity .25s;
 }
-.scale-large {
- transform: scale(1.03); 
-}
-
 //full post view modal styles
 .full-post-view-modal {
   width:100% !important;
@@ -736,7 +711,7 @@ transform: translate(0,0); */
 .postedUserInfoNavModalScroll li {
   z-index: 200;
 }
-.collapsing-transition{
+/*.collapsing-transition{
   position: relative;
   height: 0;
   overflow: hidden;
@@ -746,4 +721,4 @@ transform: translate(0,0); */
   transition-duration: .5s;
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
-}
+}*/
